--- a/node/node/Cargo.toml
+++ b/node/node/Cargo.toml
@@ -51,6 +51,7 @@ sp-keyring = { workspace = true }
 authority-selection-inherents = { workspace = true }
 frame-system = { workspace = true }
 pallet-transaction-payment = { workspace = true }
+sp-block-production-log = { workspace = true }
 sp-block-rewards = { workspace = true }
 sidechain-domain = { workspace = true }
 sidechain-slots = { workspace = true }
