--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,10 +71,11 @@ jobs:
         run: |
           earthly -P +ci-pre-merge --image=${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node --tags="${{ steps.get_sha.outputs.sha }}"
       - name: Upload partner-chains-node artifact
+        working-directory: ./to-build
         uses: actions/upload-artifact@v4
         with:
           name: partner-chains-node-artifact
-          path: ./partner-chains-node-artifact
+          path: ./to-build/partner-chains-node-artifact
 
   local-environment-tests:
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
@@ -229,22 +230,22 @@ jobs:
           earthly -P +ci-post-merge --image=${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node --tags="${{ steps.get_sha.outputs.sha }} latest"
       - name: Rename artifact
         run: |
-          cp partner-chains-node partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
-          chmod +x partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
+          cp ./to-build/partner-chains-node ./to-build/partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
+          chmod +x ./to-build/partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
       - name: Upload partner-chains-node artifact
         uses: actions/upload-artifact@v4
         with:
           name: partner-chains-node-linux-artifact
-          path: ./partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
+          path: ./to-build/partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
       - name: Upload chain spec artifacts
         uses: actions/upload-artifact@v4
         with:
           name: chain-specs
           path: |
-            ./devnet_chain_spec.json
-            ./ci_preview_chain_spec.json
-            ./staging_preview_chain_spec.json
-            ./staging_preprod_chain_spec.json
+            ./to-build/devnet_chain_spec.json
+            ./to-build/ci_preview_chain_spec.json
+            ./to-build/staging_preview_chain_spec.json
+            ./to-build/staging_preprod_chain_spec.json
 
   build-macos-x86_64:
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
@@ -501,22 +502,22 @@ jobs:
           earthly -P +ci-workflow-dispatch --image=${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node --tags="${{ inputs.sha }}"
       - name: Rename artifact
         run: |
-          cp partner-chains-node partner-chains-node-${{ inputs.sha }}-x86_64-linux
-          chmod +x partner-chains-node-${{ inputs.sha }}-x86_64-linux
+          cp ./to-build/partner-chains-node ./to-build/partner-chains-node-${{ inputs.sha }}-x86_64-linux
+          chmod +x ./to-build/partner-chains-node-${{ inputs.sha }}-x86_64-linux
       - name: Upload partner-chains-node artifact
         uses: actions/upload-artifact@v4
         with:
           name: partner-chains-node-linux-artifact
-          path: ./partner-chains-node-${{ inputs.sha }}-x86_64-linux
+          path: ./to-build/partner-chains-node-${{ inputs.sha }}-x86_64-linux
       - name: Upload chain spec artifacts
         uses: actions/upload-artifact@v4
         with:
           name: chain-specs
           path: |
-            ./devnet_chain_spec.json
-            ./ci_preview_chain_spec.json
-            ./staging_preview_chain_spec.json
-            ./staging_preprod_chain_spec.json
+            ./to-build/devnet_chain_spec.json
+            ./to-build/ci_preview_chain_spec.json
+            ./to-build/staging_preview_chain_spec.json
+            ./to-build/staging_preprod_chain_spec.json
   
   build-macos-x86_64-workflow-dispatch:
     if: github.event_name == 'workflow_dispatch'
