--- a/node/runtime/Cargo.toml
+++ b/node/runtime/Cargo.toml
@@ -77,6 +77,8 @@ session-manager = { workspace = true }
 pallet-native-token-management = { workspace = true }
 sp-native-token-management = { workspace = true, features = ["serde"] }
 pallet-session-runtime-stub = { workspace = true, default-features = false }
+sp-address-associations = { workspace = true }
+pallet-address-associations = { workspace = true }
 
 [dev-dependencies]
 sp-io = { workspace = true }
@@ -122,6 +124,7 @@ std = [
 	"pallet-timestamp/std",
 	"pallet-transaction-payment-rpc-runtime-api/std",
 	"pallet-transaction-payment/std",
+	"pallet-address-associations/std",
 	"session-manager/std",
 	"sp-api/std",
 	"sp-block-builder/std",
@@ -150,6 +153,7 @@ std = [
 	"pallet-native-token-management/std",
 	"sp-native-token-management/std",
 	"pallet-session-runtime-stub/std",
+	"sp-address-associations/std",
 ]
 
 runtime-benchmarks = [
@@ -164,6 +168,7 @@ runtime-benchmarks = [
 	"sp-runtime/runtime-benchmarks",
 	"pallet-block-production-log/runtime-benchmarks",
 	"pallet-native-token-management/runtime-benchmarks",
+	"pallet-address-associations/runtime-benchmarks",
 ]
 try-runtime = [
 	"frame-try-runtime/try-runtime",
