stake distribution query

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ members = [
 	"toolkit/offchain",
 	"toolkit/primitives/plutus-data",
 	"toolkit/pallets/address-associations",
+	"toolkit/primitives/stake-distribution",
 ]
 resolver = "2"
 
@@ -230,6 +231,7 @@ session-manager = { path = "toolkit/primitives/session-manager", default-feature
 sp-sidechain = { path = "toolkit/primitives/sidechain", default-features = false }
 pallet-native-token-management = { path = "toolkit/pallets/native-token-management", default-features = false }
 sp-native-token-management = { path = "toolkit/primitives/native-token-management", default-features = false }
+sp-stake-distribution = { path = "toolkit/primitives/stake-distribution", default-features = false }
 sc-partner-chains-consensus-aura = { path = "toolkit/client/consensus/aura", default-features = false }
 sp-partner-chains-consensus-aura = { path = "toolkit/primitives/consensus/aura", default-features = false }
 pallet-partner-chains-session = { path = "toolkit/pallets/partner-chains-session", default-features = false }
