--- a/node/node/Cargo.toml
+++ b/node/node/Cargo.toml
@@ -89,8 +89,22 @@ frame-benchmarking = { workspace = true }
 sidechain-runtime = { workspace = true }
 sidechain-mc-hash = { workspace = true, features = ["mock"] }
 sp-native-token-management = { workspace = true }
-db-sync-follower = { workspace = true, features = ["block-source", "candidate-source", "native-token", "mc-hash", "sidechain-rpc"] }
-main-chain-follower-mock = { workspace = true, features = ["block-source", "candidate-source", "native-token", "mc-hash", "sidechain-rpc"] }
+db-sync-follower = { workspace = true, features = [
+    "block-source",
+    "candidate-source",
+    "native-token",
+    "mc-hash",
+    "sidechain-rpc",
+    "stake-distribution",
+] }
+main-chain-follower-mock = { workspace = true, features = [
+    "block-source",
+    "candidate-source",
+    "native-token",
+    "mc-hash",
+    "sidechain-rpc",
+    "stake-distribution",
+] }
 tokio = { workspace = true }
 cli-commands = { workspace = true }
 
