--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -367,10 +367,40 @@ jobs:
           deployment_mc_epoch: $DEPLOYMENT_MC_EPOCH
           threads: 1
 
-  publish-ghcr:
+  publish-ghcr-after-tests:
     if: |
       inputs.no-ghcr == false && 
-      (inputs.no-tests == true || needs.run-all-tests-on-n2-epoch.result == 'success')
+      inputs.no-tests == false
+    needs: [run-all-tests-on-n2-epoch]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Trigger Publish Workflow
+        run: |
+          curl -X POST \
+            -H "Authorization: token ${{ secrets.ACTIONS_PUBLISH_PAT }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/${{ github.repository }}/actions/workflows/release-publish-ghcr.yml/dispatches \
+            -d '{"ref": "${{ github.ref_name }}", "inputs": {"sha": "${{ inputs.sha }}", "tag": "${{ inputs.tag }}"}}'
+
+  publish-ghcr-immediately:
+    if: |
+      inputs.no-ghcr == false && 
+      inputs.no-tests == true
+    runs-on: ubuntu-latest
+    steps:
+      - name: Trigger Publish Workflow
+        run: |
+          curl -X POST \
+            -H "Authorization: token ${{ secrets.ACTIONS_PUBLISH_PAT }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/${{ github.repository }}/actions/workflows/release-publish-ghcr.yml/dispatches \
+            -d '{"ref": "${{ github.ref_name }}", "inputs": {"sha": "${{ inputs.sha }}", "tag": "${{ inputs.tag }}"}}'
+
+  publish-public-release-after-tests:
+    if: |
+      inputs.no-release == false && 
+      inputs.no-public-release == false && 
+      inputs.no-tests == false
     permissions:
       id-token: write
       contents: write
@@ -383,19 +413,18 @@ jobs:
           curl -X POST \
             -H "Authorization: token ${{ secrets.ACTIONS_PUBLISH_PAT }}" \
             -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/${{ github.repository }}/actions/workflows/release-publish-ghcr.yml/dispatches \
+            https://api.github.com/repos/${{ github.repository }}/actions/workflows/release-publish-draft-release.yml/dispatches \
             -d '{"ref": "${{ github.ref_name }}", "inputs": {"sha": "${{ inputs.sha }}", "tag": "${{ inputs.tag }}"}}'
 
-  publish-public-release:
+  publish-public-release-immediately:
     if: |
       inputs.no-release == false && 
       inputs.no-public-release == false && 
-      (inputs.no-tests == true || needs.run-all-tests-on-n2-epoch.result == 'success')
+      inputs.no-tests == true
     permissions:
       id-token: write
       contents: write
       packages: write
-    needs: run-all-tests-on-n2-epoch
     runs-on: ubuntu-latest
     steps:
       - name: Trigger Publish Workflow
