--- a/.github/actions/tests/setup-python/action.yml
+++ b/.github/actions/tests/setup-python/action.yml
@@ -1,5 +1,5 @@
 name: 'Install python and pytest'
-description: 'Setup ptyhon for running e2e tests'
+description: 'Setup python for running e2e tests'
 
 runs:
   using: composite
@@ -17,8 +17,8 @@ runs:
         sudo apt install -y software-properties-common
         sudo add-apt-repository ppa:deadsnakes/ppa
         sudo apt update
-        sudo apt install -y python3.10 python3.10-venv python3.10-dev
-        sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.10 1
+        sudo apt install -y python3.12 python3.12-venv python3.12-dev
+        sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.12 1
         curl -L --silent https://github.com/getsops/sops/releases/download/v3.7.3/sops_3.7.3_amd64.deb > sops.deb && sudo dpkg -i sops.deb && rm sops.deb
         python -m venv venv
         source venv/bin/activate
