change: include candidate type and MC pkey in committee data
Signed-off-by: Nikolaos Dymitriadis <nikolaos.dymitriadis@iohk.io>

--- a/node/runtime/Cargo.toml
+++ b/node/runtime/Cargo.toml
@@ -15,6 +15,7 @@ log = { workspace = true }
 parity-scale-codec = { workspace = true }
 scale-info = { workspace = true }
 derive-new = { workspace = true }
+serde = { workspace = true }
 serde_json = { workspace = true, default-features = false, features = [
 	"alloc",
 ] }
