--- a/toolkit/primitives/authority-selection-inherents/Cargo.toml
+++ b/toolkit/primitives/authority-selection-inherents/Cargo.toml
@@ -25,7 +25,7 @@ sp-inherents = { workspace = true }
 sp-runtime = { workspace = true }
 sp-std = { workspace = true }
 thiserror = { workspace = true, optional = true }
-serde = { workspace = true, optional = true }
+serde = { workspace = true }
 sp-consensus-slots = { workspace = true }
 
 [dev-dependencies]
