change: include candidate type and MC pkey in committee data
Signed-off-by: Nikolaos Dymitriadis <nikolaos.dymitriadis@iohk.io>

--- a/toolkit/primitives/session-validator-management/Cargo.toml
+++ b/toolkit/primitives/session-validator-management/Cargo.toml
@@ -28,8 +28,11 @@ std = [
     "sp-inherents/std",
     "sp-std/std",
     "sp-runtime/std",
+    "sidechain-domain/std",
+    "sidechain-domain/serde",
     "thiserror",
-    "envy"
+    "envy",
+    "serde"
 ]
 serde = [
 	"dep:serde",
