--- a/toolkit/primitives/session-validator-management/query/Cargo.toml
+++ b/toolkit/primitives/session-validator-management/query/Cargo.toml
@@ -29,3 +29,4 @@ hex-literal = { workspace = true }
 minicbor = { workspace = true }
 plutus-datum-derive = { workspace = true }
 tokio = { workspace = true }
+authority-selection-inherents = { workspace = true, features = ["mock"] }
