--- a/node/runtime/Cargo.toml
+++ b/node/runtime/Cargo.toml
@@ -65,6 +65,7 @@ frame-system-benchmarking = { workspace = true, optional = true }
 
 # Local Dependencies
 sp-block-rewards = { workspace = true }
+sp-block-production-log = { workspace = true }
 pallet-block-production-log = { workspace = true }
 pallet-block-rewards = { workspace = true }
 sp-sidechain = { workspace = true }
@@ -153,6 +154,7 @@ std = [
 	"pallet-native-token-management/std",
 	"sp-native-token-management/std",
 	"pallet-session-runtime-stub/std",
+	"sp-block-production-log/std",
 ]
 
 runtime-benchmarks = [
